2005-06-22  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/aclocal5.test: Adjust to recent CVS Autoconf changes.

	* automake.in (handle_footer): Do not output an unformatted
	definition of SOURCES, it is already done correctly in
	generate_makefile.  This superfluous definition introduced long
	lines in some Makefiles, hence breakages in tools with a limited
	line length.  Report from Mathias Froehlich.

2005-06-11  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/am/texibuild.am (?GENERIC_INFO?%SOURCE_SUFFIX%%DEST_SUFFIX%):
	Fix redirections in previous patch.

2005-06-08  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/am/texibuild.am (?GENERIC_INFO?%SOURCE_SUFFIX%%DEST_SUFFIX%):
	Do not backup any file if makeinfo is not installed.
	* lib/missing (makeinfo): Do not touch a missing info file.
	* tests/txinfo30.test: New file.
	* tests/Makefile.am (TESTS): Add txinfo30.test.
	Report from Bob Proulx.

	* doc/automake.texi (Extending aclocal): Typo.

2005-05-24  Brian Gough  <bjg@network-theory.co.uk>  (tiny change)

	* lib/am/texinfos.am (.dvi.ps): Add $(am__TEXINFO_TEX_DIR) to TEXINPUTS.

2005-05-15  Alexandre Duret-Lutz  <adl@gnu.org>

	Fix PR automake/461:
	* automake.in (require_build_directory): Canonicalize directories
	with different names, such as `foo/bar' and `./foo//bar'.
	* tests/subobj9.test: Augment to test that.
	Report from Tom Tromey.

2005-05-14  Alexandre Duret-Lutz  <adl@gnu.org>

	* COPYING, ChangeLog, ChangeLog.00, ChangeLog.01, ChangeLog.02,
	ChangeLog.03, ChangeLog.96, ChangeLog.98, HACKING, Makefile.am,
	NEWS, README, TODO, aclocal.in, automake.in, bootstrap, configure,
	configure.ac, doc/Makefile.am, doc/fdl.texi, lib/COPYING,
	lib/Makefile.am, lib/acinstall, lib/compile, lib/config-ml.in,
	lib/config.guess, lib/config.sub, lib/depcomp, lib/elisp-comp,
	lib/gnupload, lib/mdate-sh, lib/missing, lib/py-compile,
	lib/symlink-tree, lib/texinfo.tex, lib/ylwrap,
	lib/Automake/ChannelDefs.pm, lib/Automake/Channels.pm,