@@ -56,6 +56,7 @@ Dieter Baron		dillo@stieltjes.smc.univie.ac.at
 Dmitry Mikhin		dmitrym@acres.com.au
 Doug Evans		devans@cygnus.com
 Duncan Gibson		duncan@thermal.esa.int
+Ed Hartnett		ed@unidata.ucar.edu
 Eleftherios Gkioulekas	lf@amath.washington.edu
 Elena A. Vengerova	helen@oktetlabs.ru
 Elmar Hoffmann		elho@elho.net
