@@ -138,6 +138,7 @@ cond34.test \
 cond35.test \
 cond36.test \
 cond37.test \
+cond38.test \
 condd.test \
 condhook.test \
 condinc.test \
