@@ -1,3 +1,15 @@
+2005-06-24  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* lib/Automake/Variable.pm (define, _new): Remember the helper
+	variable created for the last conditional += on each variable, and
+	only append further += in the same condition to this last helper
+	variable, not to older helper variables.  This way the order of
+	the items appended to the variable is preserved.
+	* tests/cond21.test: Adjust.
+	* tests/cond38.test: New file.
+	* tests/Makefile.am (TESTS): Add cond38.test.
+	Report from Ed Hartnett.
+
 2005-06-22  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* tests/aclocal5.test: Adjust to recent CVS Autoconf changes.
